improvements to "balanced" team making algorithm
